--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -33,6 +33,10 @@
     </style>
   </head>
   <body>
+    <div class="container">
+      <div class="left_Box"></div>
+      <div class="right_Box"></div>
+    </div>
     <p>Perfume</p>
 
     <h1>Gabrielle Essence Eau De Parfum</h1>
