--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -22,40 +22,31 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="container">
-      <div class="left_Box"></div>
-      <div class="right_Box"></div>
-    </div>
-    <p>Perfume</p>
+      <div class="left_Box">
+        <img src="./images/image-product-desktop.jpg" alt="" />
+      </div>
+      <div class="right_Box">
+        <div class="right_innerBox">
+          <p>P E R F U M E</p>
 
-    <h1>Gabrielle Essence Eau De Parfum</h1>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
 
-    <p>
-      A floral, solar and voluptuous interpretation composed by Olivier Polge,
-      Perfumer-Creator for the House of CHANEL.
-    </p>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
 
-    <span>$149.99</span>
-    <p>$169.99</p>
+          <span>$149.99</span>
+          <p class="money">$169.99</p>
 
-    <p>Add to Cart</p>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+          <div class="Cart">
+            <p><img src="./images/icon-cart.svg" alt="" /> Add to Cart</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
