--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -34,7 +34,7 @@
 
           <h1>Gabrielle Essence Eau De Parfum</h1>
 
-          <p>
+          <p id="Explanation">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
